@@ -1,0 +1,16 @@
+	cpu	68020
+
+	org	0
+
+	move.l	([a2,a3*4,100000],200000),d0
+	move.l	([a2,a3*4,100000.l],200000),d0
+	move.l	([a2,a3*4,10000],200000),d0
+	move.l	([a2,a3*4,10000.w],200000),d0
+	move.l	([a2,a3*4,10000.l],200000),d0
+
+	move.l	([pc,a3*4,*+100000],200000),d0
+	move.l	([pc,a3*4,*+100000.l],200000),d0
+	move.l	([pc,a3*4,*+10000],200000),d0
+	move.l	([pc,a3*4,*+10000.w],200000),d0
+	move.l	([pc,a3*4,*+10000.l],200000),d0
+
