@@ -1,0 +1,5 @@
++----------------------- Test Application 68KDIS ----------------------------+
+|                                                                            |
+|      This test 'plays' a bit with displacement sizes on the 68K            |
+|                                                                            |
++----------------------------------------------------------------------------+
