@@ -39,9 +39,12 @@
 /*           2002-01-27 Build 19                                             */
 /*                                                                           */
 /*****************************************************************************/
-/* $Id: version.c,v 1.82 2016/02/07 16:02:37 alfred Exp $                     */
+/* $Id: version.c,v 1.83 2016/04/26 14:17:45 alfred Exp $                     */
 /***************************************************************************** 
  * $Log: version.c,v $
+ * Revision 1.83  2016/04/26 14:17:45  alfred
+ * - 1.42 Bld 108
+ *
  * Revision 1.82  2016/02/07 16:02:37  alfred
  * - 1.42 Bld 107
  *
@@ -326,8 +329,8 @@
 #include "stdinc.h"
 #include <string.h>
 
-char *Version = "1.42 Beta [Bld 107]";
-char *DebVersion = "1.42bld107-1";
+char *Version = "1.42 Beta [Bld 108]";
+char *DebVersion = "1.42bld108-1";
 LongInt VerNo = 0x142f;
 
 char *InfoMessCopyright = "(C) 1992,2016 Alfred Arnold";
